<resources>
    <string name="app_name">VTI farm</string>

    <string name="name">Name</string>
    <string name="userName">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="emptyField">Complete Fields</string>
    <string name="worngPassword">Wrong Pasworrd</string>
    <string name="pleaseWait">Please Wait</string>
    <string name="loading">Loading ....</string>
    <string name="login">login</string>
    <string name="info">Info: Loading Please Wait Info: Loading Please WaitInfo: Loading Please WaitInfo: Loading Please WaitInfo: Loading Please WaitInfo: Loading Please Wait</string>


    <string name="water">1</string>
    <string name="electricity">2</string>
    <string name="workers">3</string>
    <string name="doctors">4</string>
    <string name="farmers">5</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
